--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,16 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    
+  </head>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
+</html>
+
+
+
 <h1>Homes#top</h1>
 <p>Find me in app/views/homes/top.html.erb</p>
