--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Books#index</h1>
-<p>Find me in app/views/books/index.html.erb</p>
+<html>
+  <head></head>
+  <body>
+  <header></header>
+  <main>
+    <div>
+    <table class="table table-striped">
+        <tr>
+          <th>user_image</th>
+          <th>Title</th>
+          <th>Opinion</th>
+        </tr>
+        <% @books.each do |book| %>
+        <tr>
+        <td></td>
+        <td><%= book.book_name %></td>
+        <td><%= book.caption %></td>
+        </tr>
+        <% end %>
+    
+    </table>
+  </div>
+  </main>
+  <footer></footer>
+  </body>
+  
+</html>
+
+
+
+
+
