--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,17 @@
 <% @books.each do |book| %>
 <% end %>
 
+
+
+<h1>User info</h1>
+<table>
+  <tr><th>image</th><td> </td></tr>
+  <tr><th>name</th><td>nuts</td></tr>
+  <tr><th>introduction</th><td>hello!!</td></tr>
+  
+</table>
+
+
 <h1>New book</h1>
   <%= form_with model: @book do |f| %>
    
