--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,1 +1,9 @@
 <h1>Editing Book</h1>
+  <%= form_with model: @book do |f| %>
+
+    <h4>Title</h4>
+      <%= f.text_field :book_name %>
+    <h4>Opinion</h4>
+      <%= f.text_area :caption %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
