--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New book</h1>
-  <%= form_with model: @books do |f| %>
+<html>
+  <h1>New book</h1>
+  <%= form_with model: @book do |f| %>
    
     <h4>Title</h4>
-      <%= f.text_field :title %>
+      <%= f.text_field :book_name %>
     <h4>Opinion</h4>
-      <%= f.text_area :opinion %>
+      <%= f.text_area :caption %>
     <%= f.submit 'Create Book' %>
   <% end %>
+</html>
