--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -12,5 +12,8 @@
 
 
 
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<h1>welcome to Bookers !!</h1>
+<p>In <strong>Bookers</strong>,</p>
+<p>you can share and exchange your opinions , inpressions , and emotions
+
+about various books!</p>
