--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,10 +3,32 @@
   <body>
   <header></header>
   <main>
+    <div class="container">
+  <div class="row">
+    <div class="col-lg-4">
+      <h1>User info</h1>
+      <table>
+  <tr><th>image</th><td> </td></tr>
+  <tr><th>name</th><td><%= @user.name %></td></tr>
+  <tr><th>introduction</th><td><%= @user.email %></td></tr>
+</table>
+<%= link_to "Edit", edit_user_path(@user), method: :edit %>
+
+<h1>New book</h1>
+  <%= form_with model: @book do |f| %>
+   
+    <h4>Title</h4>
+      <%= f.text_field :book_name %>
+    <h4>Opinion</h4>
+      <%= f.text_area :caption %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
+    </div>
+    <div class="col-lg-8">
     <div>
     <table class="table table-striped">
         <tr>
-          <th>user_image</th>
+          <th>user</th>
           <th>Title</th>
           <th>Opinion</th>
         </tr>
@@ -19,6 +41,9 @@
         <% end %>
     
     </table>
+    </div>
+    </div>
+    </div>
   </div>
   </main>
   <footer></footer>
