--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,6 +1,6 @@
 <html>
   <h1>New book</h1>
-  <%= form_with model: @book do |f| %>
+  <%= form_with model: @post_book do |f| %>
    
     <h4>Title</h4>
       <%= f.text_field :book_name %>
