--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,26 @@
+<div class="container">
+  <div class="row"> 
+<div class="col-lg-4">
+  <h1>User info</h1>
 <table>
+  <tr><th>name</th><td><%= @user.name %></td></tr>
+  <tr><th>introduction</th><td><%= @user.email %></td></tr>
+  <tr><th>image</th><td> </td></tr>
+  
+</table>
 
+  <h1>New book</h1>
+  <%= form_with model: @book do |f| %>
+
+    <h4>Title</h4>
+      <%= f.text_field :book_name %>
+    <h4>Opinion</h4>
+      <%= f.text_area :caption %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
+    </div>
+    <div class="col-lg-8">
+<table>
   <div>
 
   <thead>
@@ -15,20 +36,13 @@
     <td><%= @post_book.book_name %></td>
     <td><%= @post_book.caption %></td>
     <td><%= link_to "Edit", edit_book_path(@post_book) %></td>
-    <td><%= link_to "Destroy", book_path(@post_book), method: :delete %></td>
+    <td><% if @post_book.user == current_user %><%= link_to "Destroy", book_path(@post_book), method: :delete %><% end %></td>
     </tr>
   </thead>
   </div>
 </table>
+</div>
+</div>
+</div>
   <tbody>
 
-
-<h1>New book</h1>
-  <%= form_with model: @book do |f| %>
-
-    <h4>Title</h4>
-      <%= f.text_field :book_name %>
-    <h4>Opinion</h4>
-      <%= f.text_area :caption %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
