--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,9 @@
 <h1>Books</h1>
-<table>
-  <thead>
-    <th>Title</th>
-    <th>Opinion</th>
-    <th colspan="2"></th>
-  </thead>
-</table>
-  <tbody>
-<% @books.each do |book| %>
-<% end %>
 
-
-
-<h1>User info</h1>
+<div class="container">  <!-- この行を追加 -->
+  <div class="row">
+    <div class="col-lg-4">
+      <h1>User info</h1>
 <table>
   <tr><th>image</th><td> </td></tr>
   <tr><th>name</th><td><%= @user.name %></td></tr>
@@ -29,3 +20,21 @@
       <%= f.text_area :caption %>
     <%= f.submit 'Create Book' %>
   <% end %>
+    </div>
+    <div class="col-lg-8">
+<table>
+  <thead>
+    <th>Title</th>
+    <th>Opinion</th>
+    <th colspan="2"></th>
+  </thead>
+</table>
+  <tbody>
+<% @books.each do |book| %>
+<% end %>
+
+
+
+  </div>
+  </div>
+  </div>
