--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,15 +12,15 @@
   <tr><th>name</th><td><%= @user.name %></td></tr>
   <tr><th>introduction</th><td><%= @user.email %></td></tr>
 </table>
-<%= link_to "Edit", edit_user_path(@user), method: :edit %>
+<%= link_to "Edit", edit_user_path(@user) %>
 
 <h1>New book</h1>
   <%= form_with model: @book do |f| %>
 
     <h4>Title</h4>
-      <%= f.text_field :book_name %>
+      <%= f.text_field :title %>
     <h4>Opinion</h4>
-      <%= f.text_area :caption %><br>
+      <%= f.text_area :body %><br>
     <%= f.submit 'Create' %>
   <% end %>
     </div>
@@ -45,9 +45,9 @@
   <% end %>
         <% @books.each do |book| %>
         <tr>
-        <td><%= link_to "user" %></td>
-        <td><%= book.book_name %></td>
-        <td><%= book.caption %></td>
+        <td><%= link_to "user", user_path(@books) %></td>
+        <td><%= book.title %></td>
+        <td><%= book.body %></td>
         </tr>
         <% end %>
 
