--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -5,17 +5,17 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      
+      <h1>welcome to Bookers !!</h1>
+      <p>In <strong>Bookers</strong>,</p>
+      <p>you can share and exchange your opinions , inpressions , and emotions<br>
+      about various books!</p>
+      
+      <%= link_to "Log in", new_user_session_path, class: 'nav-link text-dark' %>
+      <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
+    </main>
     <footer></footer>
   </body>
 </html>
 
-
-
-<h1>welcome to Bookers !!</h1>
-<p>In <strong>Bookers</strong>,</p>
-<p>you can share and exchange your opinions , inpressions , and emotions<br>
-about various books!</p>
-
-<%= link_to "Log in", new_user_session_path, class: 'nav-link text-dark' %>
-<%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
