--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,14 @@
 <h1>User info</h1>
 
-  
-Name
-Image
-Introduction
-btn:Update User
+<%= form_with model: @user do |f| %>
+
+<h4>Name</h4>
+<%= f.text_field :name %>
+
+<h4>Image</h4>
+<%= f.file_field :profile_image, accept: "image/*" %>
+
+<h4>introduction</h4>
+<%= f.text_area :introduction %>
+<%= f.submit 'Update User' %>
+ <% end %>
