--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,34 +9,40 @@
   <tr><th>name</th><td><%= @user.name %></td></tr>
   <tr><th>introduction</th><td><%= @user.email %></td></tr>
 </table>
-<%= link_to "Edit", edit_user_path(@user), method: :edit %>
+<%= link_to "Edit", edit_user_path(@user) %>
+<!--link_toはデフォルトがGET なのでメソッドの指定はしないのが正解。deleteはメソッド指定が必要な場合もある-->
+
 
 <h1>New book</h1>
   <%= form_with model: @book do |f| %>
-   
+
     <h4>Title</h4>
-      <%= f.text_field :book_name %>
+      <%= f.text_field :title %>
     <h4>Opinion</h4>
-      <%= f.text_area :caption %>
+      <%= f.text_area :body %>
     <%= f.submit 'Create Book' %>
   <% end %>
     </div>
     <div class="col-lg-8">
-      
-      
+
+
       <h1>Books</h1>
 <table class="table table-striped">
   <thead>
+    <th>user</th>
     <th>Title</th>
     <th>Opinion</th>
     <th colspan="2"></th>
   </thead>
+  <% @books.each do |book| %>
+  <tr>
+    <td><%= link_to "user", user_path(@books) %></td>
+    <td><%= book.title %></td>
+    <td><%= book.body %></td>
+  </tr>
+  <% end %>
 </table>
   <tbody>
-<% @books.each do |book| %>
-<% end %>
-
-
 
   </div>
   </div>
