--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -8,13 +8,64 @@
   </ul>
 <% end %>
 
-  <h1>New book</h1>
-  <%= form_with model: @post_book do |f| %>
-   
+  <html>
+  <head></head>
+  <body>
+  <header></header>
+  <main>
+    <div class="container">
+  <div class="row">
+    <div class="col-lg-4">
+      <h1>User info</h1>
+      <table class="table table-striped">
+  <tr><th><%= image_tag @user.get_profile_image(50,50) %></th><td> </td></tr>
+  <tr><th>name</th><td><%= @user.name %></td></tr>
+  <tr><th>introduction</th><td><%= @user.introduction %></td></tr>
+</table>
+<%= link_to "Edit", edit_user_path(@user) %>
+
+<h1>New book</h1>
+  <%= form_with model: @book do |f| %>
+
     <h4>Title</h4>
       <%= f.text_field :title %>
     <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
+      <%= f.text_area :body %><br>
+    <%= f.submit 'Create' %>
   <% end %>
+    </div>
+    <div class="col-lg-8">
+
+    <div>
+      <h1>Books</h1>
+    <table class="table table-striped">
+      <thead>
+          <th> </th>
+          <th>Title</th>
+          <th>Opinion</th>
+      </thead>
+
+
+  <% @books.each do |book| %>
+  <tr>
+    <td>
+      <%= link_to user_path(book.user) do %>
+      <%= image_tag book.user.get_profile_image(50,50) %>
+      <% end %></td>
+    <td>
+      <%= link_to book_path(book.user) do %>
+      <%= book.title %></td>
+      <% end %>
+    <td><%= book.body %></td>
+  </tr>
+  <% end %>
+    </table>
+    </div>
+    </div>
+    </div>
+  </div>
+  </main>
+  <footer></footer>
+  </body>
+
 </html>
