--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,11 +2,10 @@
   <div class="row"> 
 <div class="col-lg-4">
   <h1>User info</h1>
-<table>
+<table class="table table-striped">
+  <tr><th><%= image_tag @user.get_profile_image(50,50) %></th><td> </td></tr>
   <tr><th>name</th><td><%= @user.name %></td></tr>
-  <tr><th>introduction</th><td><%= @user.email %></td></tr>
-  <tr><th>image</th><td> </td></tr>
-  
+  <tr><th>introduction</th><td><%= @user.introduction %></td></tr>
 </table>
 
   <h1>New book</h1>
@@ -41,11 +40,16 @@
     </tr>
 
     <tr>
-    <td></td>
+    <td>
+      <%= link_to user_path(@user) do %>
+      <%= image_tag @user.get_profile_image(50,50) %>
+    <% end %></td>
+    <%= form_with model: @book do |f| %>
     <td><%= @post_book.title %></td>
     <td><%= @post_book.body %></td>
     <td><%= link_to "Edit", edit_book_path(@post_book) %></td>
     <td><% if @post_book.user == current_user %><%= link_to "Destroy", book_path(@post_book), method: :delete %><% end %></td>
+    <% end %>
     </tr>
   </thead>
   </div>
