--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
               <%= link_to 'Home', root_path, class: 'nav-link text-white' %>
             </li>
             <li class="nav-item">
-              <%= link_to 'Users', user_path(current_user.id), class: 'nav-link text-white' %>
+              <%= link_to 'Users', users_path, class: 'nav-link text-white' %>
             </li>
             <li class="nav-item">
               <%= link_to "Books", books_path, class: 'nav-link text-white' %>
@@ -42,7 +42,7 @@
               <%= link_to 'Home', root_path, class: 'nav-link text-white' %>
             </li>
             <li class="nav-item">
-
+              <%= link_to 'About', about_path, class: 'nav-link text-white' %>
             </li>
             <li class="nav-item">
               <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-white' %>
