--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,1 +1,17 @@
-<h1>Welcome to Bookers!</h1>
+<html>
+    <head>
+        <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+
+    </head>
+    <body>
+        <h1>Welcome to <i class="fas fa-book"></i>Bookers!</h1>
+
+    </body>
+    
+    <style>
+    
+    h1 {
+    text-align: center;
+    }
+    </style>
+</html>
