--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
     <header></header>
     <main>
-      
+
       <h1>welcome to Bookers !!</h1>
-      <p>In <strong>Bookers</strong>,</p>
+      <p>In<i class="fas fa-book"></i><strong>Bookers</strong>,</p>
       <p>you can share and exchange your opinions , inpressions , and emotions<br>
       about various books!</p>
-      
-      <%= link_to "Log in", new_user_session_path, class: 'nav-link text-dark' %>
-      <%= link_to "Sign up", new_user_registration_path, class: 'nav-link text-dark' %>
+
+      <a><%= link_to "Log in", new_user_session_path, class: "btn btn-success btn-sm btn-block" %><br>
+      <%= link_to "Sign up", new_user_registration_path, class: "btn btn-info btn-sm btn-block" %></a>
     </main>
     <footer></footer>
+
+    <style>
+    h1 {
+      text-align: center;
+    }
+
+    p {
+      text-align: center;
+    }
+
+
+    main {
+      padding: 80px;
+    }
+
+    </style>
+
+
   </body>
 </html>
 
