--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,7 @@
 <h4>Image</h4>
 <%= f.file_field :profile_image, accept: "image/*" %>
 
-<h4>introduction</h4>
+<h4 class = "">introduction</h4>
 <%= f.text_area :introduction %>
 <%= f.submit 'Update User' %>
  <% end %>
