--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,46 @@
-
+<html>
+  <head>
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  </head>
+  
+  <% if flash[:notice] %>
+     <p id="notice">
+       <%= flash[:notice] %>
+     </p>
+     <style>
+       p {
+         color: green;
+         padding: 30px;
+       }
+     </style>
+   <% end %>
+   
+   
 
 <div class="container">  <!-- この行を追加 -->
   <div class="row">
     <div class="col-lg-4">
       <h1>User info</h1>
 <table class="table table-striped">
-  <tr><th><%= image_tag @user.get_profile_image(50,50) %></th><td> </td></tr>
-  <tr><th>name</th><td><%= @user.name %></td></tr>
-  <tr><th>introduction</th><td><%= @user.introduction %></td></tr>
+  <tr><th><%= image_tag @postuser.get_profile_image(50,50) %></th><td> </td></tr>
+  <tr><th>name</th><td><%= @postuser.name %></td></tr>
+  <tr><th>introduction</th><td><%= @postuser.introduction %></td></tr>
 </table>
-<%= link_to "Edit", edit_user_path(@user) %>
+
+<a><%= link_to edit_user_path(@user), class: "btn btn-secondary btn-block" do %>
+       <i class="fas fa-user-cog fa-lg"></i>
+      <% end %></a>
+
+
+
+<style>
+  
+　a {
+    text-align: center;
+    background-color: gray;
+  }
+</style>
+
 <!--link_toはデフォルトがGET なのでメソッドの指定はしないのが正解。deleteはメソッド指定が必要な場合もある-->
 
 <h1>New book</h1>
@@ -18,10 +49,14 @@
     <h4>Title</h4>
       <%= f.text_field :title %>
     <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
+      <%= f.text_area :body %><br>
+    <%= f.submit 'Create Book', class: "btn btn-success" %>
   <% end %>
-    </div>
+  </div>
+    
+    
+    
+    
     <div class="col-lg-8">
 
 
@@ -39,7 +74,11 @@
       <%= link_to user_path(book.user) do %>
       <%= image_tag book.user.get_profile_image(50,50) %>
     <% end %></td>
-    <td><%= book.title %></td>
+    <td>
+      <%= link_to book_path(book.user) do %>
+      <%= book.title %>
+      <% end %></td>
+
     <td><%= book.body %></td>
   </tr>
   <% end %>
@@ -49,3 +88,4 @@
   </div>
   </div>
   </div>
+  </html>
