--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
   <main>
     <div class="container">
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-md-3">
       <h1>User info</h1>
       <table class="table table-striped">
   <tr><th><%= image_tag @user.get_profile_image(50,50) %></th><td> </td></tr>
@@ -14,24 +14,34 @@
 </table>
 
 <% if @user == current_user %>
-<a><%= link_to edit_user_path(@user), class: "btn btn-secondary btn-block" do %>
+<%= link_to edit_user_path(@user), class: "btn btn-secondary btn-block" do %>
 <i class="fas fa-user-cog fa-lg"></i>
-<% end %></a>
+<% end %>
 <% end %>
 
 
 
 <h1>New book</h1>
+
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
   <%= form_with model: @book do |f| %>
 
     <h4>Title</h4>
       <%= f.text_field :title %>
     <h4>Opinion</h4>
       <%= f.text_area :body %><br>
-    <%= f.submit 'Create', class: "btn btn-success" %>
+    <%= f.submit 'Create Book', class: "btn btn-success" %>
   <% end %>
     </div>
-    <div class="col-lg-8">
+    <div class="col-md-8 offset-md-1">
 
     <div>
       <h1>Books</h1>
