--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,37 +1,33 @@
-<% if flash[:notice] %>
-     <p id="notice">
-       <%= flash[:notice] %>
-     </p>
-     <style>
-       p {
-         color: green;
-         padding: 30px;
-       }
-     </style>
-   <% end %>
-   
 
 <div class="container">
   <div class="row">
-<div class="col-lg-4">
+<div class="col-md-3">
   <h1>User info</h1>
 <table class="table table-striped">
   <tr><th><%= image_tag @user.get_profile_image(50,50) %></th><td> </td></tr>
   <tr><th>name</th><td><%= @user.name %></td></tr>
   <tr><th>introduction</th><td><%= @user.introduction %></td></tr>
-</table>
+  </table>
+  
+  
+  <%= link_to edit_user_path(@user), class: "btn btn-secondary btn-block" do %>
+    <i class="fas fa-user-cog fa-lg"></i>
+  <% end %>
+  
+
+
 
   <h1>New book</h1>
   <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <%= @book.errors.count %>errorが発生しました
   <ul>
     <% @list.errors.full_messages.each do |message| %>
     <li><%= message %></li>
     <% end %>
   </ul>
   <% end %>
-   
-   
+
+
 
   <%= form_with model: @book do |f| %>
 
@@ -42,8 +38,8 @@
     <%= f.submit 'Create Book', class: "btn btn-success" %>
   <% end %>
     </div>
-    <div class="col-lg-8">
-    <div>
+    
+    <div class="col-md-8 offset-md-1">
 
 
   <h1>Book detail</h1>
@@ -58,12 +54,11 @@
 
     <tr>
     <td>
-      <a>
       <%= link_to user_path(@user) do %>
       <%= image_tag @user.get_profile_image(50,50) %>
     <% end %><br>
     <%= link_to user_path(@user) do %><%= @user.name %><% end %>
-    </a></td>
+    </td>
     <%= form_with model: @book do |f| %>
     <td><%= @post_book.title %></td>
     <td><%= @post_book.body %></td>
@@ -77,5 +72,4 @@
     </div>
     </div>
     </div>
-  <tbody>
 
