--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
+
 <html>
+
   <head>
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
   <body>
-    <header></header>
+    <header>
+
+    </header>
     <main>
 
       <h1>welcome to Bookers !!</h1>
@@ -12,8 +16,8 @@
       <p>you can share and exchange your opinions , inpressions , and emotions<br>
       about various books!</p>
 
-      <a><%= link_to "Log in", new_user_session_path, class: "btn btn-success btn-sm btn-block" %><br>
-      <%= link_to "Sign up", new_user_registration_path, class: "btn btn-info btn-sm btn-block" %></a>
+      <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-sm btn-block" %><br>
+      <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-sm btn-block" %>
     </main>
     <footer></footer>
 
