--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,18 @@
 <h1>User info</h1>
+<% if @user.errors.any? %>
+  <%= @user.errors.count %>件のerrorが発生しました
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 
 <%= form_with model: @user do |f| %>
 
 <h4>Name</h4>
+<% if @user == current_user %>
 <%= f.text_field :name %>
 
 <h4>Image</h4>
@@ -11,4 +21,5 @@
 <h4 class = "">introduction</h4>
 <%= f.text_area :introduction %>
 <%= f.submit 'Update User' %>
+ <% end %>
  <% end %>
